fix: Fix the repositories implementation and refactor